--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,10 +1,12 @@
 Changelog
 =========
 
-0.2 (unreleased)
+0.1.1 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- When loading data from Archetypes field, use the ``raw`` format.
+  This prevent substitution from destroying ``resolveuid`` usage.
+  [keul]
 
 
 0.1 (2013-03-14)
