--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -6,6 +6,10 @@ Changelog
 
 - Requires zope.tal >= 3.6.1 if on Python 2.6. This close `#2`__.
   [keul]
+- Make ``portal_css`` and ``portal_javascript`` happy: do not add
+  load condition for JavaScript and CSS. This prevent fragmentation on
+  loaded resources
+  [keul]
 
 __ https://github.com/RedTurtle/rt.bulkmodify/issues/2
 
